# allphot

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  THANKS  TODO  acinclude.m4  acx_cfitsio.m4  acx_gnu_sed.m4  allphot.bashcomp  configure.ac
data/: .opt  Makefile.am  allframe.opt  allstar.opt  cfht.dict  daosex.sex  default.param  default.sex  macho.dict  photo.opt  sex.param  sky.assoc  sky00.list  sky01.list  sky03.list  sky04.list  sky08.list  sky09.list
doc/: Makefile.am  ccdpck.man  cook3.1.ps  daophotii.ps  daophotii.tex
examples/: Makefile.am  README  allframe.bash  allframe.sh  allstar-pka.bash  allstar-sex.sh  allstar.bash  allstar.sh  allstar2.sh  daorecipe.bash  iter_allframe.bash  iter_allstar.bash  macho_allstar.bash  machoprocess.bash  recipe.example  sky2pho.sh  sorter.sh
libs/: Makefile.am  allframe.bash.in  config.bash  config.bash.in  core.bash  core.bash.in  daophot.bash.in  daophot.bash.in.orig  default.allphot  default.allphot.in  fits.bash.in  options.bash  options.bash.in  output.bash.in  paths.bash  paths.bash.in  process.bash.in  process_runner.sh  qa.bash  qa.bash.in  tests.bash.in  utils.bash.in
m4/: ax_cfitsio.m4  ax_gnu_sed.m4  ax_pkg_lib.m4
modules/: Makefile.am  allframe.allphot  allstar.allphot  cat.allphot  catalog.allphot  daomaster.allphot  daomatch.allphot  daophot.allphot  daophot.allphot.new  daophot.allphot.orig  filters.allphot  modules.allphot  montage2.allphot  psf.allphot  recipe.allphot
old/: allphot.in  daophot.bash  options.bash  process.bash
recipes/: allstar.sh
scripts/: Makefile.am  allframe.bash  allphot.bash  allphot.conf  allphot.in  allstar.tbl  daomaster.opt  daophot.bash  daophot.opt  options.bash  photo.tbl  process.bash  recipes.bash  test-allphot.bash
scripts/old/: allframe.sh  allframe.tbl  daophot.sh  daophot.tbl  options.bash  process.bash  recipes.bash
src/: Makefile.am  addstar.f  allframe.f  allstar.f  allstsubs.f  arrays.inc  bothsubs.f  bothsubs.f.orig  daogrow.f  daomaster.f  daomatch.f  daophot.f  dummysm.f  executils.h  find.f  fitskey.c  fitskey.h  fitssatur.c  fitsubs.f  fitsutils.c  fitsutils.h  fotometry.f  fudge.f  group.f  iosubs.f  irasubs.f  lnxsubs.f  main_fitshead.c  main_fitskey.c  main_fitssatur.c  mathsubs.f  montage2.f  nstar.f  pckpsf.f  peak.f  psf.f  sort.f  stringutils.c  stringutils.h  substar.f  (+1 more)
tests/: Makefile.am  daorecipe.bash  generate.py  sky.dict  sky00.list  sky02.list  sky05.list  sky06.list  sky07.list  test-allphot.bash  test-allphot.bash.in
