MAINTAINERCLEANFILES = Makefile.in
CLEANFILES = *~

EXTRA_DIST= \
	generate.py \
	sky.assoc \
	sky00.fits \
	sky00.list \
	sky01.fits \
	sky01.list \
	sky02.fits \
	sky02.list \
	sky03.fits \
	sky03.list \
	sky04.fits \
	sky04.list \
	sky05.fits \
	sky05.list \
	sky06.fits \
	sky06.list \
	sky07.fits \
	sky07.list \
	sky08.fits \
	sky08.list \
	sky09.fits \
	sky09.list

check_SCRIPTS = test-allphot.bash
check_PROGRAMS =

TESTS = $(check_SCRIPTS)

clean-local:
	-rm -rf tests
